2004-10-24  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc
	  doc/descriptions-external/genesys.desc: Moved Plustek OpticFilm
	  7200 to genesys.desc (GL841 chipset). Added UMAX Astra 3400
	  (0x50 model). Added Xerox WorkCentre M15i.

2004-10-23 Giuseppe Sacco <eppesuig@debian.org>

	* Updated italian translation.

2004-10-21  Mattias Ellert <mattias.ellert@tsl.uu.se>

	* backend/gt68xx.c backend/mustek.c: Remove an extra "in".
	* po/*.po: Fixing fuzzy translations (and some others).

2004-10-21  Rene Rebe <rene@exactcode.de>

	* backend/avision.h backend/avision.c: update of the scanner ID table,
	  wait_4_light bugfixes, fixed color packing, fixed 16bit modes
	  (especially for big-endian systems), avoid 16bit modes for default
	  modes, fixed gamma-table for some models as well as spelling on the
	  way

2004-10-20  Rene Rebe <rene@exactcode.de>

	* backend/avision.c doc/descriptions/avision.desc doc/sane-avision.man:
	  substituted my mail address and web-site to a new one - due to
	  leaving the rocklinux project

2004-10-19  Gerhard Jaeger <gerhard@gjaeger.de>

	* backend/plustek.c: Using now the same strings for gain and offset 
	  like the umax_pp backend (bug #300962).
	* doc/plustek/Plustek-USB.changes: Update.
	* po/*.po: Update due to changes in the Plustek backend.
	* po/sane-backends.de.po: Fixed gain translation.

2004-10-18  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/sane-find-scanner.c: When getting string descriptors, ask
	  for the length of the descriptor first (bug #301001).

2004-10-18  Ullrich Sigwanz <usigwanz@freesurf.ch>

	* backend/niash_core.c: 
	* backend/niash.c: correcting vertical scanning start 
	  point for changed max. page height

2004-10-17  Ullrich Sigwanz <usigwanz@freesurf.ch>

	* backend/niash_core.c: using exact number of lines for a scan

---- FEATURE FREEZE FOR SANE 1.0.15 ---
-- snapshot 1.0.15-pre1

2004-10-17  Henning Meier-Geinitz <henning@meier-geinitz.de>
